--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@types/aws-lambda": "^8.10.81",
     "@types/node": "^16.11.39",
     "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "eslint": "^8.17.0",
+    "eslint-plugin-react": "^7.30.0",
     "prettier": "^2.3.2",
     "serverless": "^2.52.1",
     "serverless-offline": "^8.8.0",
